--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,10 @@
         <surfire.version>2.19.1</surfire.version>
         <progressindicator.version>1.0.0</progressindicator.version>
         <conllio.version>0.1.1</conllio.version>
-        <simplednn.version>0.6.0</simplednn.version>
+        <simplednn.version>0.9.0</simplednn.version>
         <syntaxdecoder.version>0.1.0</syntaxdecoder.version>
         <dependencytree.version>0.3.0</dependencytree.version>
+        <utils.version>2.1.0</utils.version>
     </properties>
 
     <repositories>
@@ -293,6 +294,12 @@
             <groupId>com.kotlinnlp</groupId>
             <artifactId>dependencytree</artifactId>
             <version>${dependencytree.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kotlinnlp</groupId>
+            <artifactId>utils</artifactId>
+            <version>${utils.version}</version>
         </dependency>
     </dependencies>
 </project>
