--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <kotlin.version>1.2.41</kotlin.version>
         <spek.version>1.1.5</spek.version>
         <xenocom.version>0.0.5</xenocom.version>
+        <argparser.version>2.0.7</argparser.version>
         <klaxon.version>3.0.5</klaxon.version>
         <dokka.version>0.9.16</dokka.version>
         <surfire.version>2.19.1</surfire.version>
@@ -66,6 +67,7 @@
         <simplednn.version>0.10.0</simplednn.version>
         <syntaxdecoder.version>0.2.0</syntaxdecoder.version>
         <dependencytree.version>0.3.1</dependencytree.version>
+        <tokensencoder.version>0.2.2</tokensencoder.version>
         <utils.version>2.1.0</utils.version>
     </properties>
 
@@ -241,6 +243,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.xenomachina</groupId>
+            <artifactId>kotlin-argparser</artifactId>
+            <version>${argparser.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.beust</groupId>
             <artifactId>klaxon</artifactId>
             <version>${klaxon.version}</version>
@@ -256,6 +264,12 @@
             <groupId>com.kotlinnlp</groupId>
             <artifactId>simplednn</artifactId>
             <version>${simplednn.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kotlinnlp</groupId>
+            <artifactId>tokensencoder</artifactId>
+            <version>${tokensencoder.version}</version>
         </dependency>
 
         <dependency>
