--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <syntaxdecoder.version>0.2.1</syntaxdecoder.version>
         <dependencytree.version>0.3.1</dependencytree.version>
         <tokensencoder.version>0.2.2</tokensencoder.version>
+        <linguisticdescription.version>0.8.0</linguisticdescription.version>
         <utils.version>2.1.0</utils.version>
     </properties>
 
@@ -276,6 +277,12 @@
             <groupId>com.kotlinnlp</groupId>
             <artifactId>syntaxdecoder</artifactId>
             <version>${syntaxdecoder.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kotlinnlp</groupId>
+            <artifactId>linguisticdescription</artifactId>
+            <version>${linguisticdescription.version}</version>
         </dependency>
 
         <dependency>
