--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
         <dependencytree.version>0.3.2</dependencytree.version>
         <tokensencoder.version>0.3.0</tokensencoder.version>
         <linguisticdescription.version>0.8.1</linguisticdescription.version>
+        <morphologicalanalyzer.version>0.2.0</morphologicalanalyzer.version>
         <utils.version>2.1.0</utils.version>
     </properties>
 
@@ -277,6 +278,12 @@
             <groupId>com.kotlinnlp</groupId>
             <artifactId>linguisticdescription</artifactId>
             <version>${linguisticdescription.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kotlinnlp</groupId>
+            <artifactId>morphologicalanalyzer</artifactId>
+            <version>${morphologicalanalyzer.version}</version>
         </dependency>
 
         <dependency>
