--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
         <dokka.version>0.9.16</dokka.version>
         <surfire.version>2.19.1</surfire.version>
         <conllio.version>0.2.4</conllio.version>
+        <constraints.version>0.1.0</constraints.version>
         <simplednn.version>0.11.0</simplednn.version>
         <syntaxdecoder.version>0.2.3</syntaxdecoder.version>
         <dependencytree.version>0.3.2</dependencytree.version>
@@ -254,6 +255,12 @@
             <groupId>com.kotlinnlp</groupId>
             <artifactId>conllio</artifactId>
             <version>${conllio.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kotlinnlp</groupId>
+            <artifactId>constraints</artifactId>
+            <version>${constraints.version}</version>
         </dependency>
 
         <dependency>
