--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <simplednn.version>0.11.0</simplednn.version>
         <dependencytree.version>0.4.0</dependencytree.version>
         <tokensencoder.version>0.4.0</tokensencoder.version>
+        <lssencoder.version>0.1.0</lssencoder.version>
         <linguisticdescription.version>0.10.0</linguisticdescription.version>
         <morphologicalanalyzer.version>0.4.0</morphologicalanalyzer.version>
         <utils.version>2.1.0</utils.version>
@@ -272,6 +273,12 @@
             <groupId>com.kotlinnlp</groupId>
             <artifactId>tokensencoder</artifactId>
             <version>${tokensencoder.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kotlinnlp</groupId>
+            <artifactId>lssencoder</artifactId>
+            <version>${lssencoder.version}</version>
         </dependency>
 
         <dependency>
