--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -13,6 +13,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.version>1.2.41</kotlin.version>
+        <xenocom.version>0.0.5</xenocom.version>
+        <argparser.version>2.0.7</argparser.version>
         <klaxon.version>3.0.5</klaxon.version>
         <neuralparser.version>0.5.0</neuralparser.version>
         <simplednn.version>0.11.1</simplednn.version>
@@ -82,6 +84,18 @@
             <groupId>com.beust</groupId>
             <artifactId>klaxon</artifactId>
             <version>${klaxon.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xenomachina</groupId>
+            <artifactId>xenocom</artifactId>
+            <version>${xenocom.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xenomachina</groupId>
+            <artifactId>kotlin-argparser</artifactId>
+            <version>${argparser.version}</version>
         </dependency>
 
         <dependency>
